# manim-data-structures

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: documentation.md
.github/workflows/: comp_ver.sh  publish-package.yml
docs/: requirements.txt
docs/source/: conf.py  example.rst  index.rst  refsub.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/guides/: arrays.rst  index.rst
docs/source/reference/: arrays.rst  enums.rst  index.rst  variables.rst
src/manim_data_structures/: __init__.py  array.py  m_array.py  m_array_pointer.py  m_element.py  m_enum.py  m_sliding_window.py  m_variable.py
tests/: __init__.py
