[tool.poetry]
name = "manim-data-structures"
version = "0.1.6"
description = "A Manim implementation for data structures"
authors = ["Hammad Nasir <hammadn99@gmail.com>"]
readme = "README.md"
packages = [{include = "manim_data_structures", from = "src"}]
repository = "https://github.com/drageelr/manim-data-structures"
documentation = "https://manim-data-structures.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
manim = ">=0.16.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.3.0"
furo = "^2022.9.29"
pre-commit = "^2.20.0"
isort = "5.10.1"
flake8 = {version = "6.0.0", python = ">=3.8.1,<3.11"}
flake8-builtins = "^2.0.1"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
flake8-simplify = "^0.19.3"
flake8-comprehensions = "^3.10.1"

[tool.poetry.dev-dependencies.black]
version = ">=22.10.0"
allow-prereleases = false
python = ">=3.7"
markers = "platform_python_implementation == 'CPython'"

[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/drageelr/manim-data-structures/issues"
"Changelog" = "https://github.com/drageelr/manim-data-structures/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_data_structures" = "manim_data_structures"
